examples/test/testpolicy13305.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13305
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key46: value7
      key13: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value33
          key24: value24
          key18: value25
      podSelector:
        matchLabels:
          key36: value13
          key15: value16
          key19: value44
